kubmanifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health-api
  template:
    metadata:
      labels:
        app: health-api
    spec:
      containers:
        - name: health-api
          image: mansurib/health-api:latest
          ports:
            - name: livennes-port
              containerPort: 8000
          livenessProbe:
            httpGet:
              port: livennes-port
              path: /health
            initialDelaySeconds: 4
            periodSeconds: 5
          readinessProbe:
            httpGet:
              port: livennes-port
              path: /health
            initialDelaySeconds: 4
            periodSeconds: 5
